--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ python-dateutil>=2.8.2
 pytz>=2021.3
 
 # Logging and Monitoring
-logging>=0.5.1.2
+# logging>=0.5.1.2
 
 # Testing and Development
 pytest>=6.2.5
@@ -67,5 +67,5 @@ bcrypt>=3.2.0
 tqdm>=4.62.0
 
 # Frontend Development (Optional)
-nodejs>=14.0.0
-npm>=6.14.0
+#nodejs>=14.0.0
+#npm>=6.14.0
