--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,17 @@
-# Core Python packages
-numpy>=1.21.0
-pandas>=1.3.0
-python-dotenv>=0.19.0
+# Web Framework
+Flask==3.1.0
+Werkzeug==3.1.3
+Jinja2==3.1.5
 
-# Machine Learning and Data Analysis
-scikit-learn>=1.0.0
-tensorflow>=2.6.0
+# Data Processing
+numpy==1.26.0
+scikit-learn==1.6.1
 
-# Web Framework and Related
-Flask>=2.0.1
-Flask-Login>=0.5.0
-Flask-SQLAlchemy>=2.5.1
-Flask-WTF>=0.15.1
-Werkzeug>=2.0.1
-Jinja2>=3.0.1
-itsdangerous>=2.0.1
-email-validator>=1.1.3
+# Route Optimization
+geopy==2.4.1
 
-# Sensor Data Processing
-pyserial>=3.5
-paho-mqtt>=1.6.1
-
-# Blockchain Integration
-web3>=5.24.0
-eth-brownie>=1.17.0
-
-# Geolocation and Route Optimization
-geopy>=2.2.0
-folium>=0.12.1
-python-tsp>=0.3.0
-
-# API and Networking
-requests>=2.26.0
-aiohttp>=3.8.0
-websockets>=10.0
-
-# Database
-SQLAlchemy>=1.4.23
-psycopg2-binary>=2.9.1
-redis>=4.0.2
-
-# Date and Time Handling
-python-dateutil>=2.8.2
-pytz>=2021.3
-
-# Logging and Monitoring
-# logging>=0.5.1.2
-
-# Testing and Development
-pytest>=6.2.5
-pytest-cov>=2.12.0
-black>=21.7b0
-flake8>=3.9.0
-mypy>=0.910
-
-# Documentation
-Sphinx>=4.2.0
-sphinx-rtd-theme>=1.0.0
+# Date and Time
+python-dateutil==2.9.0
 
 # Security
-cryptography>=3.4.7
-PyJWT>=2.1.0
-bcrypt>=3.2.0
-
-# Utilities
-tqdm>=4.62.0
-
-# Frontend Development (Optional)
-#nodejs>=14.0.0
-#npm>=6.14.0
+bcrypt==4.1.2
